# csc471

./: README.md
lab1/src/: Shape.h  main.cpp  shape.cpp
lab2/: CMakeLists.txt
lab2/src/: Primatives.cpp  Primatives.h  main.cpp
lab3/resources/: simple_vert.glsl
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/src/: MatrixStack.cpp  main.cpp
lab5/src/: MatrixStack.cpp  main.cpp
lab6/resources/: simple_frag.glsl
lab6/src/: main.cpp
lab7/resources/: tex_frag0.glsl  tex_vert.glsl
lab7/src/: main.cpp
lab8/resources/: simple_vert.glsl  tex_frag0.glsl  tex_vert.glsl
lab8/src/: main.cpp
program1/src/: PixelSpace.cpp  PixelSpace.h  Primatives.cpp  Primatives.h  WorldSpace.cpp  WorldSpace.h  main.cpp
program2/src/: main.cpp
program3/: .gitignore  README.md
program3/resources/: simple_frag.glsl  simple_vert.glsl  tex_frag0.glsl  tex_vert.glsl
program3/src/: main.cpp
program4/: README.md
program4/src/: main.cpp
ray_tracer/: .gitignore  CMakeLists.txt  Makefile  README.txt  log  primatives.cpp  primatives.h  raytracer.cpp
ray_tracer/rendered_images/: convert.sh
ray_tracer/src/: camera.cpp  camera.cu  camera.h  cuda_help.h  geometry.cpp  geometry.h  interval.h  material.cpp  material.cu  material.h  object.cpp  object.cu  object.h  primatives.cpp  primatives.h  raytracer.cpp  raytracer.cu  util.h
